website: Add the interface definitions page

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,9 +14,11 @@ jobs:
         with:
           node-version: '12'
 
+      - name: Install Homebrew packages
+        run: brew install mdbook python3
 
-      - name: Install mdbook
-        run: brew install mdbook
+      - name: Install pip packages
+        run: pip3 install --user -r tools/requirements.txt
 
       - name: Build documentation
         run: make website
