--- a/ci/arm.config
+++ b/ci/arm.config
@@ -1,112 +1,16 @@
-# CONFIG_ARCH_X64 is not set
-# CONFIG_ARCH_ARM64 is not set
+#
+#  A fragment of .config file used in CI. Any other values will be filled in
+#  with defaults.
+#
 CONFIG_ARCH_ARM=y
-# CONFIG_ARCH_EXAMPLE is not set
 CONFIG_MACHINE_MICROBIT=y
 CONFIG_BUILD_DEBUG=y
-# CONFIG_BUILD_RELEASE is not set
 
-#
-# Common Setup (kernel and userland)
-#
-# CONFIG_OPT_LEVEL_0 is not set
-CONFIG_OPT_LEVEL_2=y
-# CONFIG_OPT_LEVEL_3 is not set
-# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=128
-# end of Common Setup (kernel and userland)
-
-#
-# Kernel
-#
-
-#
-# ARM Options
-#
-CONFIG_ARCH="arm"
-CONFIG_ARCH_DEFAULTS=y
-# end of ARM Options
-
-#
-# Micro:bit Machine Support
-#
-CONFIG_MACHINE="microbit"
-# end of Micro:bit Machine Support
-
-CONFIG_SEMIHOSTING=y
-CONFIG_TRACE_IPC=y
-CONFIG_IPC_FASTPATH=y
 CONFIG_NOMMU=y
 CONFIG_NUM_TASKS=2
 CONFIG_TASK_NAME_LEN=16
-CONFIG_TASK_TIME_SLICE_MS=10
 CONFIG_KLOG_BUF_SIZE=1
-# CONFIG_ABI_EMU is not set
-
-#
-# Security
-#
-# end of Security
-# end of Kernel
-
-#
-# Userland
-#
 CONFIG_OOL_BUFFER_LEN=0
-# end of Userland
 
-CONFIG_MODULES=y
-
-#
-# Servers
-#
-# CONFIG_BOOT_TASK_VM is not set
 CONFIG_BOOT_TASK_NOMMU_TEST=y
-
-#
-# Enabled servers
-#
-
-#
-# <*>: autostarted / <M>: manually started from shell
-#
-# CONFIG_SHELL_SERVER is not set
-# CONFIG_DM_SERVER is not set
-# CONFIG_TCPIP_SERVER is not set
-# CONFIG_WEBAPI_SERVER is not set
-# CONFIG_MINLIN_SERVER is not set
-
-#
-# Applications
-#
-# CONFIG_HELLO_SERVER is not set
-# CONFIG_BENCHMARK_SERVER is not set
-# CONFIG_UTILS_SERVER is not set
-# CONFIG_TEST_SERVER is not set
-# end of Applications
-
-#
-# Filesystem Drivers
-#
-# CONFIG_TARFS_SERVER is not set
-# CONFIG_FATFS_SERVER is not set
-# end of Filesystem Drivers
-
-#
-# Device Drivers
-#
-# CONFIG_RAMDISK_SERVER is not set
-# CONFIG_IDE_SERVER is not set
-# end of Device Drivers
-
-# CONFIG_HELLO_FROM_RUST_SERVER is not set
-# CONFIG_EXAMPLE_SERVER is not set
-# end of Enabled servers
-
-CONFIG_BOOT_TASK="nommu_test"
-
-#
-# NOMMU test
-#
-# end of NOMMU test
-# end of Servers
