--- a/ci/tcpip.config
+++ b/ci/tcpip.config
@@ -1,107 +1,11 @@
+#
+#  A fragment of .config file used in CI. Any other values will be filled in
+#  with defaults.
+#
 CONFIG_ARCH_X64=y
-# CONFIG_ARCH_ARM64 is not set
-# CONFIG_ARCH_ARM is not set
-# CONFIG_ARCH_EXAMPLE is not set
 CONFIG_BUILD_DEBUG=y
-# CONFIG_BUILD_RELEASE is not set
 
-#
-# Common Setup (kernel and userland)
-#
-# CONFIG_OPT_LEVEL_0 is not set
-CONFIG_OPT_LEVEL_2=y
-# CONFIG_OPT_LEVEL_3 is not set
-# CONFIG_OPT_LEVEL_S is not set
-CONFIG_NUM_SYMBOLS=512
-# end of Common Setup (kernel and userland)
-
-#
-# Kernel
-#
-CONFIG_ARCH="x64"
-
-#
-# x64 Options
-#
-CONFIG_LAPIC_TIMER_1MS_COUNT=10000
-# end of x64 Options
-
-CONFIG_SEMIHOSTING=y
-# CONFIG_TRACE_IPC is not set
-CONFIG_IPC_FASTPATH=y
-CONFIG_NUM_TASKS=64
-CONFIG_TASK_NAME_LEN=16
-CONFIG_ONESHOT_HEAP_SIZE=4096
-CONFIG_TASK_TIME_SLICE_MS=10
-CONFIG_KLOG_BUF_SIZE=1024
-# CONFIG_ABI_EMU is not set
-
-#
-# Security
-#
-CONFIG_DENY_KERNEL_MEMORY_ACCESS=y
-CONFIG_MAX_MAPPABLE_ADDR=0x100000000
-# end of Security
-# end of Kernel
-
-#
-# Userland
-#
-CONFIG_OOL_BUFFER_LEN=16384
-# end of Userland
-
-CONFIG_MODULES=y
-
-#
-# Servers
-#
-CONFIG_BOOT_TASK_VM=y
-
-#
-# Enabled servers
-#
-
-#
-# <*>: autostarted / <M>: manually started from shell
-#
-# CONFIG_SHELL_SERVER is not set
 CONFIG_DM_SERVER=y
 CONFIG_TCPIP_SERVER=y
 CONFIG_WEBAPI_SERVER=y
-# CONFIG_MINLIN_SERVER is not set
-
-#
-# Applications
-#
-# CONFIG_HELLO_SERVER is not set
-# CONFIG_BENCHMARK_SERVER is not set
-# CONFIG_UTILS_SERVER is not set
-# CONFIG_TEST_SERVER is not set
-# end of Applications
-
-#
-# Filesystem Drivers
-#
-# CONFIG_TARFS_SERVER is not set
-# CONFIG_FATFS_SERVER is not set
-# end of Filesystem Drivers
-
-#
-# Device Drivers
-#
-# CONFIG_RAMDISK_SERVER is not set
-# CONFIG_IDE_SERVER is not set
 CONFIG_E1000_SERVER=y
-# CONFIG_VIRTIO_NET_SERVER is not set
-# end of Device Drivers
-
-# CONFIG_HELLO_FROM_RUST_SERVER is not set
-# CONFIG_EXAMPLE_SERVER is not set
-# end of Enabled servers
-
-#
-# Bootstrap
-#
-CONFIG_BOOT_TASK="vm"
-# end of Bootstrap
-# end of Servers
