--- a/kernel/arch/x64/Kconfig
+++ b/kernel/arch/x64/Kconfig
@@ -1,3 +1,7 @@
 menu "x64 Options"
 	depends on ARCH_X64
+
+    config X64_PRINTK_IN_SCREEN
+        bool "Printk in the screen"
+        default y
 endmenu
