Improve Rust support

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.c,*.h,*.S,*.py,*.idl,*.md,Kconfig}]
+[{*.c,*.h,*.S,*.rs,*.py,*.idl,*.md,Kconfig}]
 indent_style = space
 indent_size = 4
 
